Well was trying to build, but as86 segfault. So first step will be:
C99ify the code and clean the current formating mess.

Will fix issues after that.

--- a/man/as86.1
+++ b/man/as86.1
@@ -237,7 +237,7 @@ Force linker to include the specified label in a.out
 .B .GLOBL .GLOBAL
 Define label as external and force import even if it isn't used.
 .TP
-.B EXTRN EXTERN IMPORT .EXTERN
+.B EXTRN extern IMPORT .extern
 Import list of externally defined labels
 .br
 NB: It doesn't make sense to use imports for raw binary files.
